--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ img:nth-child(16){
         <a class="nav-link" href="#" style="color:white">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./birthday.php" style="color:white">Greetings</a>
+        <a class="nav-link" href="./birthday.html" style="color:white">Greetings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./wishes.php" style="color:white">Wishes</a>
+        <a class="nav-link" href="./wishes.html" style="color:white">Wishes</a>
       </li>
       
         
