--- a/wishes.html
+++ b/wishes.html
@@ -69,13 +69,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" style="color:white">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="./index.php" style="color:white">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./index.html" style="color:white">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./birthday.php" style="color:white">Greetings</a>
+        <a class="nav-link" href="./birthday.html" style="color:white">Greetings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./wishes.php" style="color:white">Wishes</a>
+        <a class="nav-link" href="./wishes.html" style="color:white">Wishes</a>
       </li>
       
     </ul>
